--- a/Prestshop 1.6/sizeinreality/views/css/sizeInReality.css
+++ b/Prestshop 1.6/sizeinreality/views/css/sizeInReality.css
@@ -1,11 +1,12 @@
+canvas{display: none;}
 #myModal{
 display: none;    
 position:fixed;
 z-index: 6000;
 left: 0;
 top: 0;
-width: 100%;
-height: 100%;
+/*width: 100%;
+height: 100%;*/
 overflow: auto; 
 background-color: rgb(0,0,0);
 background-color: rgba(0,0,0,0.4); 
